<resources>
    <string name="app_name">Notif Listener</string>
    <string name="service_name">notif-listener</string>
    <string name="open_permission">Open Permission</string>
    <string name="permission_text">Permission Not Allowed, Please let us to look at your notifications</string>
    <string name="refresh">Refresh</string>
    <string name="clear_all">Clear All</string>
    <string name="send_to">Send CSV</string>
    <string name="share_button">Share List</string>
</resources>
